2004-07-23  Dafydd Harries  <daf@muse.19inch.net>

Fri Jul 23 16:35:23 2004
	* gtk/gtkradioaction.c:
	* gtk/gtkradiobutton.c:
	* gtk/gtkentry.c:
	* gtk/gtkmisc.c:
	Improve various translatable messages. (#137616)

Fri Jul 23 11:11:10 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_start_editing): 
	align the entry in the same way as the cell.  (#136749)

Fri Jul 23 11:01:00 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextbtree.c (_gtk_text_line_previous_could_contain_tag): 
	Don't iterate too far up. (#147965, Olivier Sessink)

Fri Jul 23 10:28:43 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_finalize): 
	* gtk/gtkradioaction.c (gtk_radio_action_finalize): 
	* gtk/gtkfontsel.c (gtk_font_selection_finalize): 
	* gtk/gtkcellview.c (gtk_cell_view_finalize): 
	* gtk/gtkcalendar.c (gtk_calendar_finalize): 
	* gtk/gtkactiongroup.c (gtk_action_group_finalize): Remove
	unnecessary checks.  (#148175, Morten Welinder)

Thu Jul 22 01:42:16 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_class_init): 
	Add a new :ellipsize property which controls ellipsization of the 
	rendered text.  (#144835, Vincent Untz, patch by Jonathan Blandford
	and Anders Carlsson
	
	* gtk/gtkfilechooserdefault.c (create_file_list): Use ellipsization
	for the name column.

Thu Jul 22 01:21:28 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfontsel.c (gtk_font_selection_init): Add additional
	accessability relations.  (#141804,  Padraig O'Briain)

Thu Jul 22 01:16:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c: Avoid some warnings.

Thu Jul 22 01:05:16 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Require Pango 1.5.1 (for ellipsisation).

	* gtk/gtklabel.h: 
	* gtk/gtklabel.c (gtk_label_class_init): Add a new :ellipsize
	property which controls ellipsization of the label.  (#125250, 
	Tim Van Wassenhove, patch by James M. Cape)
